# controllers/songs.js
@@ -1,7 +1,7 @@
 module.exports = (dependencies) => {
     const router = dependencies.router();
 
-    router.get('/all', (request, response, next) => {
+    router.get('/', (request, response, next) => {
         // #swagger.path = '/songs'
     	// #swagger.tags = ['Song']
         // #swagger.description = 'Get list of all songs'
@@ -20,6 +20,17 @@ module.exports = (dependencies) => {
             #swagger.path = '/songs/:song_id'
             #swagger.tags = ['Song']
             #swagger.description = 'Get a specific song by song_id'
+        */
+
+        response.status(200).send('You are at /songs/:song_id');
+    });
+
+    // The second callback over here makes authentication required for this endpoint
+    router.post('/', dependencies.requires_authentication(), (request, response, next) => {
+        /*
+            #swagger.path = '/songs'
+            #swagger.tags = ['Song']
+            #swagger.description = 'Insert new song to the collection'
         */
 
         response.status(200).send('You are at /songs/:song_id');
